[package]
name = "reaper-eth-engine-types"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-types"
readme = "./README.md"

[dependencies]
reaper-eth-engine-relay-api.workspace = true
reaper-eth-engine-macros.workspace = true

# reth
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-codecs.workspace = true
reth-tasks.workspace = true
reth-db.workspace = true
async-trait.workspace = true
reth-interfaces.workspace = true
reth-rpc.workspace = true

# alloy
alloy-json-abi = { workspace = true, features = ["serde_json"] }
alloy-rpc-types.workspace = true

# tracing
tracing.workspace = true

# async
rayon.workspace = true
tokio = { workspace = true }
futures.workspace = true

# numbers
malachite = { workspace = true, features = ["enable_serde"] }
malachite-q = { workspace = true, features = ["enable_serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
erased-serde = "0.3.31"
serde_with.workspace = true
serde_repr.workspace = true

# database
clickhouse = { workspace = true, features = ["tls"] }

# openapi
# relays-openapi = { path = "./src/block_metadata/relays-openapi" }

# misc
phf.workspace = true
strum = { workspace = true, features = ["derive"] }
auto_impl.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-dyn-abi.workspace = true
alloy-rlp.workspace = true
parking_lot.workspace = true
derive_more.workspace = true
dyn-clone = "1.0.16"
itertools.workspace = true
rkyv.workspace = true
redefined.workspace = true
bytes.workspace = true
colored.workspace = true
indoc = "2"
zstd = "0.13.2"
paste = "1.0.14"
pin-project = "1.1.4"
clap.workspace = true
indicatif.workspace = true
hyper.workspace = true
prettytable-rs = "0.10"

# stats
statrs = "0.16.1"

# errors
eyre.workspace = true
thiserror.workspace = true
humansize = "2.1.3"

# hashing
ahash = "0.8.11"
once_cell = "1.19.0"
reqwest.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio.workspace = true
serial_test.workspace = true
reaper-eth-engine-macros = { path = "../eth-engine-macros" }
# reaper-eth-engine-types = { path = "../eth-engine-types", features = [
#     "tests",
#     "test_pricing",
# ] }
# reaper-eth-engine-classifier = { path = "../eth-engine-classifier", features = [
#     "tests",
# ] }
# reaper-eth-engine-core = { path = "../eth-engine-core", features = ["tests"] }
# reaper-eth-engine-database = { path = "../eth-engine-database", features = [
#     "tests",
# ] }
# reaper-eth-engine-reth-tracing = { path = "../eth-engine-reth-tracing" }

[features]
tests = []
test_pricing = []
local-reth = [
    # "reaper-eth-engine-types/local-reth",
    # "reaper-eth-engine-reth-tracing/local-reth",
    # "reaper-eth-engine-database/local-reth",
]
local-clickhouse = [
    # "reaper-eth-engine-database/local-clickhouse",
    # "reaper-eth-engine-reth-tracing/local-clickhouse",
]

[lib]
name = "reaper_eth_engine_types"
path = "src/lib.rs"
