[package]
name = "storm-trading-eth-flashbots"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/storm-trading-eth-flashbots"
readme = "./README.md"

[dependencies]
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }
ethers-flashbots = "0.15.0"
eyre = { version = "0.6" }

[lib]
name = "storm_trading_eth_flashbots"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
