[package]
name = "reaper-eth"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.0.1"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth"
readme = "./README.md"

[dependencies]
ethers = { version = "2.0.14", features = ["abigen", "ws", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rand = "0.8.5"
eyre.workspace = true
thiserror.workspace = true
hex = "0.4.3"

[lib]
name = "reaper_eth"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
