[package]
name = "reaper-telemetry"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.0.1"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-telemetry"
readme = "./README.md"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
name = "reaper_telemetry"
path = "src/lib.rs"
