[package]
name = "reaper-telemetry"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-telemetry"
readme = "./README.md"

[dependencies]
sentry = "0.34.0"
tracing = { workspace = true }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.2.0"
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "ansi",
] }
chrono.workspace = true
prometheus.workspace = true
metrics-util.workspace = true
metrics-process.workspace = true
metrics.workspace = true
dashmap.workspace = true
yansi = "1.0.1"
ansi_term = "0.12.1"

[lib]
name = "reaper_telemetry"
path = "src/lib.rs"
