[package]
name = "reaper-eth-engine-pricing-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
reaper-eth-engine-metrics = { path = "../../eth-engine-metrics" }
reaper-eth-engine-pricing = { path = "../../eth-engine-pricing", features = [
    "tests",
] }
reaper-eth-engine-core = { path = "../../eth-engine-core", features = [
    "tests",
] }
reaper-eth-engine-database = { path = "../../eth-engine-database", features = [
    "tests",
] }
reaper-eth-engine-classifier = { path = "../../eth-engine-classifier", features = [
    "tests",
] }
reaper-eth-engine-types = { path = "../../eth-engine-types", features = [
    "tests",
] }
reaper-eth-engine-reth-tracing = { path = "../../eth-engine-reth-tracing", features = [
    "tests",
] }
reaper-eth-engine-macros = { path = "../../eth-engine-macros" }

itertools = "0.13.0"
redefined.workspace = true

futures.workspace = true
thiserror.workspace = true

# reth
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-codecs.workspace = true

# tracing
tracing.workspace = true
# async
rayon.workspace = true

# numbers
malachite = { workspace = true, features = ["enable_serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
erased-serde = "0.4.5"
serde_with.workspace = true
serde_repr.workspace = true
alloy-rlp = { workspace = true, features = ["arrayvec"] }

# pathfinding
pathfinding = "4.8.1"
rustc-hash = "1.1.0"

# misc
phf.workspace = true
strum = { workspace = true, features = ["derive"] }
auto_impl.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-dyn-abi.workspace = true
parking_lot.workspace = true
petgraph = "0.6.4"
derive_more.workspace = true
async-trait.workspace = true
num-bigfloat = "1.7.0"
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
proptest = "1.4"
proptest-derive = "0.5.0"
arbitrary = "1.3"
modular-bitfield = "0.11.2"
bytes = "1.5"
rkyv.workspace = true
dashmap.workspace = true
criterion = { version = "0.5", features = ["async", "async_tokio"] }
dotenvy.workspace = true
tokio.workspace = true
rand = "0.8.5"
eyre.workspace = true

[features]
default = []
uni-v3-ticks = []
local-reth = [
    "reaper-eth-engine-reth-tracing/local-reth",
    "reaper-eth-engine-types/local-reth",
    "reaper-eth-engine-core/local-reth",
    "reaper-eth-engine-classifier/local-reth",
    "reaper-eth-engine-database/local-reth",
]
local-clickhouse = [
    "reaper-eth-engine-reth-tracing/local-clickhouse",
    "reaper-eth-engine-core/local-clickhouse",
    "reaper-eth-engine-classifier/local-clickhouse",
    "reaper-eth-engine-database/local-clickhouse",
]
